--- a/Haptic-Timer/Info.plist
+++ b/Haptic-Timer/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key></key>
 	<string></string>
+	<key>ITSAppUsesNonExemptEncryption - 2</key>
+	<false/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>audio</string>
