--- a/Haptic-Metronome-Countdown-Watch-App-Info.plist
+++ b/Haptic-Metronome-Countdown-Watch-App-Info.plist
@@ -2,15 +2,15 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>ITSAppUsesNonExemptEncryption - 2</key>
-	<false/>
 	<key>UIBackgroundModes</key>
-	<array>
-		<string>audio</string>
-		<string>fetch</string>
-	</array>
+	<array/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>This app uses HealthKit to run workout sessions, keeping the app active during timers.</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>This app uses HealthKit to run workout sessions, keeping the app active during timers.</string>
 	<key>WKBackgroundModes</key>
 	<array>
+		<string>physical-therapy</string>
 		<string>workout-processing</string>
 	</array>
 </dict>
